src/app/page.module.css
.main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0 3rem;
  min-height: 100vh;
}

.description {
  max-width: var(--max-width-pre-launch);
  width: 100%;
  margin: 3rem 0 0 0;
  font-size: 1.25rem;
  line-height: 1.75;
}

.h1 {
  font-size: 2.5rem;
  line-height: 1.325;
  max-width: var(--max-width-pre-launch);
  width: 100%;
}

.center {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.center::before {
  background: var(--secondary-glow);
  border-radius: 50%;
  height: 520px;
  width: 680px;
  left: 40%;
  margin-left: -400px;
}

.center::after {
  background: var(--primary-glow);
  height: 320px;
  width: 480px;
  left: 48%;
  z-index: -1;
}

.center::before,
.center::after {
  content: '';
  position: absolute;
  filter: blur(45px);
  transform: translateZ(0);
}

/* Enable hover only on non-touch devices */
@media (hover: hover) and (pointer: fine) {
}

/* Tablet */
@media (max-width: 1023px) {
}

/* Mobile */
@media (max-width: 720px) {
  .main {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding: 3rem 3rem;
    min-height: 100vh;
  }

  .description {
    font-size: 1.125rem;
    line-height: 1.75;
  }

.h1 {
  font-size: 2rem;
  line-height: 1.325;
}
}

@media (prefers-color-scheme: dark) {
  .vercelLogo {
    filter: invert(1);
  }

  .logo,
  .thirteen img {
    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
  }
}

@keyframes rotate {
  from {
    transform: rotate(360deg);
  }
  to {
    transform: rotate(0deg);
  }
}

